[package]
name = "phirust-transpiler"
version = "0.1.0"
edition = "2024"

[dependencies]
aho-corasick = "1.1"
clap = { version = "4.5.45", features = ["derive"] }
serde_json = "1.0"
ahash = { version = "0.8", features = ["serde"] }
regex = "1.10"

[profile.release]
lto = true
strip = true
opt-level = 3