[package]
name = "phirust-transpiler"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
serde_json = "1.0"
ahash = { version = "0.8", features = ["serde"] }
aho-corasick = "1.1.3"
regex = "1.11.1"

[profile.release]
lto = true
strip = true
opt-level = 3
