[package]
name = "phirust-transpiler"
version = "1.0.0"
edition = "2024"
license-file = "LICENSE"
readme = "README"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
serde_json = "1.0"
ahash = { version = "0.8", features = ["serde"] }
aho-corasick = "1.1.3"
regex = "1.11.2"

[profile.release]
lto = true
strip = true
opt-level = 3
